fixing vertical spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ margin: 0;
         border-radius: 1em;
         padding: 1em;
         position: absolute;
-        top: 50%;
+        top: 49%;
         left: 50%;
         margin-right: -50%;
         transform: translate(-50%, -50%)
@@ -87,7 +87,6 @@ a:hover img:first-child {
   position: absolute;
   top: 18%;
   left: 50%;
-  bottom: -50%;
   margin-right: -50%;
   transform: translate(-50%, -10%)
 }
